# rescale

./: CMakeLists.txt  app_rescale.xml  main.cpp
include/: rescale.h
